--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -41,10 +42,18 @@
                             <div class="col">
                                 <p class="text-danger fw-bold"  th:text="${#strings.replace(#strings.replace(#numbers.formatDecimal(productOnCart.price, 0, 'COMMA', 2, 'POINT'), '.00', ''), ',', '.')} + đ"></p>
                             </div>
-                            <div class="col" th:with="cart =${cartManagementList}">
-                                <div class="rounded" style="width: max-content; background-color: #f7f7f7;"><a th:href="@{'cart/minus/'+ ${productOnCart.getId()}}" class="text-decoration-none text-dark"><i class="bi bi-dash ps-2 pe-2"></i></a><p class="d-inline fw-bold" th:text="${cart[__${index.index}__].getSoLuong}"></p><a th:href="@{'cart/add/'+ ${productOnCart.getId()}}" class="text-decoration-none text-dark"><i class="bi bi-plus ps-2 pe-2"></i></a></div>
-<!--                                <p class="d-inline">SL:</p>-->
-
+                            <div class="col" th:with="cart=${cartManagementList}">
+<!--                                Tăng giảm số lượng sản phẩm-->
+                                <div class="rounded" style="width: max-content; background-color: #f7f7f7;">
+<!--                                    cú pháp onlick lỏd quá-->
+                                    <a href="#" id="reduceQuantity" th:data-name="${cart[__${index.index}__].getSoLuong}" th:onclick="|checkQuantity(${cart[__${index.index}__].getSoLuong},${productOnCart.getId()})|" class="text-decoration-none text-dark">
+                                        <i class="bi bi-dash ps-2 pe-2"></i>
+                                    </a>
+                                    <p class="d-inline fw-bold" th:text="${cart[__${index.index}__].getSoLuong}"></p>
+                                    <a th:href="@{'cart/add/'+ ${productOnCart.getId()}}" class="text-decoration-none text-dark">
+                                        <i class="bi bi-plus ps-2 pe-2"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
@@ -133,4 +142,27 @@
 <!--footer-->
 <div class="text-center" th:insert="~{footer :: footer}"></div>
 </body>
+<!-- toast -->
+<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 10000">
+    <div id="liveToast" class="toast align-items-center d-flex text-white border-0 bg-danger" role="alert"
+         aria-live="assertive" aria-atomic="true">
+        <div class="toast-body text-white" id="toast-context">
+
+        </div>
+        <button type="button" class="btn-close btn-close-dark me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+</div>
+<script th:inline="javascript">
+    function checkQuantity(quantity, sanPhamId) {
+        if (quantity === 1) {
+            const toast = new bootstrap.Toast($("#liveToast"));
+            $("#toast-context").text("Số lượng sản phẩm đã đạt đến tối thiểu");
+            toast.show();
+        } else {
+            // Use .attr() to set the attribute value
+            window.location.href = 'cart/minus/' +  sanPhamId;
+        }
+    }
+
+</script>
 </html>
